# todoism

./: .gitignore  Dockerfile  LICENSE  PYPI.md  README.md  main.py  print.py  pypi.txt  pyproject.toml  setup.py  test.json  utils.py
test/: automated_test.py  generate.py  integration.py  test.py  todocker.sh
todoism/: __main__.py  app.py  backup.py  category.py  cli.py  color.py  command.py  due.py  edit.py  keycode.py  main.py  message.py  navigate.py  path.py  preference.py  print.py  safe.py  scroll.py  search.py  settings.py  siderbar.py  state.py  strikethrough.py  task.py  theme.py  update.py  utils.py
